@@ -1,49 +1,97 @@
 <items>
         <item>
+        <title>[COLORorange]Boo! A Madea Halloween (2016)[/COLOR]</title>
+        <link></link>
+        <thumbnail>https://image.tmdb.org/t/p/w1280/dixsnX3uUBEQ5I7NtBE68wtFMEg.jpg</thumbnail>
+        </item>
+
+        <item>
         <title>[COLORorange]Halloween (1978)[/COLOR]</title>
-        <link>http://vidto.me/gauix3xcx0nz.html</link>
+        <link>https://streamango.com/f/kpkcodqmkpmbalkk/Halloween_1978_720p_BRrip_x264_YIFY_mp4</link>
         <thumbnail>https://image.tmdb.org/t/p/w640/vjoOFOTBJcJvA1weJejlZ92LZD4.jpg</thumbnail>
         </item>
 
         <item>
         <title>[COLORorange]Halloween II (1981)[/COLOR]</title>
-        <link>http://vidto.me/x9zl1v0yue2v.html</link>
+        <link>https://streamango.com/f/fcnoltsblbolnnql/Halloween_II_1981_720p_BRrip_x264_YIFY_mp4</link>
         <thumbnail>https://image.tmdb.org/t/p/w640/9oXa66gARefZBuca4xpD8EFbcVg.jpg</thumbnail>
         </item>
 
         <item>
         <title>[COLORorange]Halloween III: Season of the Witch (1982)[/COLOR]</title>
-        <link>http://vidto.me/jjj6nax90po3.html</link>
+        <link>https://streamango.com/f/mebkpcmsmlffdomo/Halloween_III_Season_of_The_Witch_1982_720p_BRrip_x264_YIFY_mp4</link>
         <thumbnail>https://image.tmdb.org/t/p/w640/svPexK18MEl0lyAqb8fFUGGsEQ8.jpg</thumbnail>
         </item>
 
         <item>
         <title>[COLORorange]Halloween 4: The Return of Michael Myers (1988)[/COLOR]</title>
-        <link>http://vidto.me/fpcppwwnheyi.html</link>
+        <link>https://streamango.com/f/leqmoeckkpelnemq/Halloween_4_The_Return_Of_Michael_Myers_fiveofseven_zombiRG_mp4</link>
         <thumbnail>https://image.tmdb.org/t/p/w640/oudmrV1WljSJMpgwq6K4VzbIMMK.jpg</thumbnail>
         </item>
 
         <item>
+        <title>[COLORorange]Halloween 5: The Revenge of Michael Myers (1989)[/COLOR]</title>
+        <link></link>
+        <thumbnail>https://image.tmdb.org/t/p/w1280/gQwN6KXBuO94kaYpeX3uaueszkd.jpg</thumbnail>
+        </item>
+
+        <item>
+        <title>[COLORorange]Halloween: The Curse of Michael Myers (1995)[/COLOR]</title>
+        <link></link>
+        <thumbnail>https://image.tmdb.org/t/p/w1280/8Tw5IttoEATGD2FHhcG9bDzqwbi.jpg</thumbnail>
+        </item>
+
+        <item>
+        <title>[COLORorange]Halloween H2O: 20 Years Later (1998)[/COLOR]</title>
+        <link></link>
+        <thumbnail>https://image.tmdb.org/t/p/w1280/crycJDHRvpQyZeQyRYtIZKIpNzK.jpg</thumbnail>
+        </item>
+
+        <item>
+        <title>[COLORorange]Halloween: Resurrection (2002)[/COLOR]</title>
+        <link></link>
+        <thumbnail>https://image.tmdb.org/t/p/w1280/9aKyqYdOGbZvUCRDxXAbRqCxM5e.jpg</thumbnail>
+        </item>
+
+        <item>
+        <title>[COLORorange]Halloween (2007)[/COLOR]</title>
+        <link></link>
+        <thumbnail>https://image.tmdb.org/t/p/w1280/9CPYBA1Fq5BdCmViSPyfPiBOcTH.jpg</thumbnail>
+        </item>
+
+        <item>
+        <title>[COLORorange]Halloween II (2009)[/COLOR]</title>
+        <link></link>
+        <thumbnail>https://image.tmdb.org/t/p/w1280/pXei2go7b2d5VyAvMKAVhyPqecW.jpg</thumbnail>
+        </item>
+
+        <item>
         <title>[COLORorange]Halloweentown (1998)[/COLOR]</title>
-        <link>http://vidto.me/npvku2m0z1i3.html</link>
+        <link></link>
         <thumbnail>https://image.tmdb.org/t/p/w640/b2bUOe2qL86GUDoncknSqCXaQgK.jpg</thumbnail>
         </item>
 
         <item>
         <title>[COLORorange]Halloweentown II: Kalabar's Revenge (2001)[/COLOR]</title>
-        <link>http://vidto.me/azw5y89nxjq2.html</link>
+        <link></link>
         <thumbnail>https://image.tmdb.org/t/p/w1280/v5ZJECL4rKsYGnmz61C5qtaj3xj.jpg</thumbnail>
         </item>
 
         <item>
         <title>[COLORorange]Halloweentown High (2004)[/COLOR]</title>
-        <link>http://vidto.me/5yq7v64vj1i4.html</link>
+        <link></link>
         <thumbnail>https://image.tmdb.org/t/p/w1280/unR7yBuFLvz0QkJ7BVh4TmMT3Uc.jpg</thumbnail>
         </item>
 
         <item>
+        <title>[COLORorange]Return to Halloweentown (2006)[/COLOR]</title>
+        <link></link>
+        <thumbnail>https://image.tmdb.org/t/p/w1280/oiL8krInXEmtaLUqciN6g4UWGwT.jpg</thumbnail>
+        </item>
+
+        <item>
         <title>[COLORorange]Hocus Pocus (1993)[/COLOR]</title>
-        <link>http://vidto.me/zfugjgzm4dhq.html</link>
+        <link>https://streamango.com/f/tbbareqqaeotobfm/Hocus_Pocus_1993_1080p_BrRip_x264_YIFY_mp4</link>
         <thumbnail>https://image.tmdb.org/t/p/w1280/okCXNIX9QXNXbWM9NBnKlMpYVBd.jpg</thumbnail>
         </item>
 
@@ -55,8 +103,26 @@
 
         <item>
         <title>[COLORorange]Monster House (2006)[/COLOR]</title>
-        <link>http://vidto.me/i0qdmvtd5m4z.html</link>
+        <link></link>
         <thumbnail>https://image.tmdb.org/t/p/w1280/vOhKyKxlmtRwRHqKGV2VrFhJjCG.jpg</thumbnail>
+        </item>
+
+        <item>
+        <title>[COLORorange]ParaNorman (2012)[/COLOR]</title>
+        <link></link>
+        <thumbnail>https://image.tmdb.org/t/p/w1280/pfGmWVyGHgdJrdKrZ5RWZpbAhkn.jpg</thumbnail>
+        </item>
+
+        <item>
+        <title>[COLORorange]Tales of Halloween (2015)[/COLOR]</title>
+        <link></link>
+        <thumbnail>https://image.tmdb.org/t/p/w1280/hISRq3TJdALQj1RGCS6bQxbTnAf.jpg</thumbnail>
+        </item>
+
+        <item>
+        <title>[COLORorange]The Houses October Built (2014)[/COLOR]</title>
+        <link></link>
+        <thumbnail>https://image.tmdb.org/t/p/w1280/b4FCnCClSVTHK55QiNwS9p9IeCF.jpg</thumbnail>
         </item>
         
 </items>
